# aos

./: ATOS_ARCHITECTURE.md  Cargo.toml  LICENSE  LinuxCompat.md  Makefile  PackageManager.md  README.md  REAL_HARDWARE_TEST.md  Revm.md  Roadmap.md  WASM-runtime-spec.md  Wasmi.md  ZkVM.md  eBPF-lite-spec.md  linker.ld  rust-toolchain.toml  y2.md  yellowpaper.md
asm/: ap_trampoline.asm  boot.asm  multiboot_header.asm  switch.asm  syscall_entry.asm  trap_entry.asm  user_agents.asm
docs/: wasm-library-grade-plan.md  wasm-library-grade-prompt.md
sdk/aos-cli/: Cargo.toml
sdk/aos-sdk/: Cargo.toml
sdk/aos-wasm-sdk/: Cargo.toml
sdk/atos-cli/: Cargo.toml
sdk/atos-ebpf-sdk/: Cargo.toml
sdk/atos-sdk/: Cargo.toml
sdk/atos-wasm-sdk/: Cargo.toml
src/: agent.rs  agent_loader.rs  attestation.rs  block.rs  capability.rs  checkpoint.rs  cost.rs  deterministic.rs  energy.rs  event.rs  heap.rs  init.rs  large_msg.rs  loader.rs  logger.rs  mailbox.rs  main.rs  merkle.rs  net.rs  node.rs  panic.rs  persist.rs  proof.rs  replay.rs  ringbuf.rs  sched.rs  smp.rs  state.rs  sync.rs  syscall.rs  trap.rs
src/agents/: accountd.rs  bad.rs  idle.rs  mod.rs  netd.rs  ping.rs  policyd.rs  pong.rs  root.rs  routerd.rs  skilld.rs  stated.rs  wasm_agent.rs
src/arch/: mod.rs
src/wasm/: decoder.rs  host.rs  instance.rs  linker.rs  mod.rs  runtime.rs  (+3 more)
tools/: run_qemu.sh  test_crossnode.sh  test_network_e2e.sh  test_sdk_e2e.sh
tools/wasm-spec-test/fuzz/: Cargo.toml
tools/wasm-spec-test/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_execute.rs  fuzz_validate.rs
uefi/: Cargo.toml
(+96 files in other folders)
