[package]
name = "atos"
version = "0.1.0"
edition = "2021"
authors = ["ATOS Project"]
description = "ATOS Stage-1: AI-native minimal operating system kernel"

[dependencies]
libm = "0.2"

[profile.dev]
panic = "abort"
debug-assertions = false  # Avoid UB checks that panic on bare metal (e.g. ptr alignment)

[profile.release]
panic = "abort"
