[package]
name = "wasm-spec-test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasm-spec-test = { path = ".." }

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
doc = false

[[bin]]
name = "fuzz_validate"
path = "fuzz_targets/fuzz_validate.rs"
doc = false

[[bin]]
name = "fuzz_execute"
path = "fuzz_targets/fuzz_execute.rs"
doc = false
